@@ -1,4 +1,9 @@
 2011-01-15 Malignant Manor <malignantmanor@users.sourceforge.net>
+	* gumps/VideoOptions_gump.cc: Straiten out row values. More
+		code changes for separate fullscreen and window settings
+	* data/*: new video options gump shape added
+
+2011-01-15 Malignant Manor <malignantmanor@users.sourceforge.net>
 	* exult.*, keyactions.cc, gumps/VideoOptions_gump.*: New function
 		"setup_video" to consolidate menu settable video configuration
 		reading and writing and implementing it into existing code.
